# jenkins-job-builder-naginator

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile  conf.py  make.bat
naginator_publisher/: __init__.py  version.py
test/: test_naginator.py
test/fixtures/: naginator_default.xml  naginator_default.yaml  naginator_error.yaml  naginator_fixed.xml  naginator_fixed.yaml  naginator_progressive.xml  naginator_progressive.yaml  naginator_regexp.xml  naginator_regexp.yaml
