[metadata]
name = jenkins-job-builder-naginator
author = Thomas Van Doren
author_email = thomas.vandoren@gmail.com
summary = Automatically reschedule a build after a build failure.
description-file = README.rst
license = Apache License, Version 2.0

[files]
packages =
    naginator_publisher

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.publishers = 
    naginator=naginator_publisher:naginator
