[metadata]
name = jenkins-job-builder-naginator
author = Thomas Van Doren
author_email = thomas.vandoren@gmail.com
summary = Automatically reschedule a build after a build failure.
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://github.com/thomasvandoren/jenkins-job-builder-naginator
version = 0.0.1
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    naginator_publisher

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.publishers = 
    naginator=naginator_publisher:naginator
